refactor: code analysis suggestions